working prototype without for nehnutelnostia; turned out there are 2 types of pages, second one needs support

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,9 @@
       "css": ["leaflet.css", "styles.css"],
       "js": ["leaflet.js", "main.js"]
     }
-  ]
+  ],
+  "web_accessible_resources": [{
+    "resources": ["images/*.png"],
+    "matches": ["<all_urls>"]
+  }]
 }
