--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
+  "name": "Flat Search Helper",
+  "description": "Adds map to real estate classifieds",
   "version": "1.0",
   "content_scripts": [
     {
